--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,16 @@
 [project]
 name = "telebio"
 version = "0.1.0"
-description = "Add your description here"
+description = "Automatic Telegram bio changer"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "cryptg>=0.5.2",
+    "dotenv>=0.9.9",
+    "python-dotenv>=1.1.0",
     "telethon>=1.42.0",
     "tgcrypto>=1.2.5",
 ]
+
+[project.scripts]
+telebio = "telebio.__main__:main"
