--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,23 @@ BIO_PROVIDER=list
 # How often to change bios (in minutes)
 UPDATE_INTERVAL_MINUTES=60
 
+# ─── YandexGPT (required when BIO_PROVIDER=llm) ────────
+# API key from https://console.yandex.cloud/
+YANDEX_API_KEY=your_yandex_api_key_here
+# Folder ID from Yandex Cloud console
+YANDEX_FOLDER_ID=your_folder_id_here
+# Model: yandexgpt-lite/latest, yandexgpt/latest, etc.
+YANDEX_MODEL=yandexgpt-lite/latest
+# Temperature 0.0–1.0 (higher = more creative)
+YANDEX_TEMPERATURE=0.9
+
 # ─── Paths ──────────────────────────────────────────────
 # Telethon session file name (without .session extension)
 SESSION_NAME=telebio
 # JSON file with phrases (relative to project root)
 PHRASES_FILE=data/phrases.json
+# JSON file with few-shot examples for LLM
+EXAMPLES_FILE=data/examples.json
 
 # ─── Logging ────────────────────────────────────────────
 LOG_LEVEL=INFO
