--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "cryptg>=0.5.2",
-    "dotenv>=0.9.9",
+    "httpx>=0.28.1",
     "python-dotenv>=1.1.0",
     "telethon>=1.42.0",
     "tgcrypto>=1.2.5",
