--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,19 @@ dependencies = [
 
 [project.scripts]
 telebio = "telebio.__main__:main"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.0",
+    "pytest-asyncio>=0.25",
+    "respx>=0.22",
+]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+pythonpath = ["src"]
+addopts = "-m 'not smoke'"
+markers = [
+    "smoke: real API smoke tests (deselected by default, run with: pytest -m smoke)",
+]
