--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 TELEGRAM_API_ID=12345678
 TELEGRAM_API_HASH=your_api_hash_here
 
+# Optional: Bot token for management bot (get from @BotFather)
+# Leave empty to disable bot management
+BOT_TOKEN=123
+
 # ─── Bio provider ───────────────────────────────────────
 # "list" — pick from data/phrases.json (sequential)
 # "llm"  — generate via LLM API (not yet implemented)
